force-app/main/default/objects/Contact/fields/Aprobador_Final__c.field-meta.xml
<CustomField>
    <fullName>Aprobador_Final__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobador Final</label>
    <type>Checkbox</type>
</CustomField>