force-app/main/default/objects/Contact/fields/Contacto_Inactivo__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Inactivo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contacto Inactivo</label>
    <type>Checkbox</type>
</CustomField>