force-app/main/default/objects/Contact/fields/contrase_a__c.field-meta.xml
<CustomField>
    <fullName>contrase_a__c</fullName>
    <label>Contraseña</label>
    <length>8</length>
    <type>Text</type>
</CustomField>