force-app/main/default/objects/Contact/fields/Tipo_Cargo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Cargo__c</fullName>
    <label>Tipo Cargo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administración</fullName>
            </value>
            <value>
                <fullName>Asistente</fullName>
            </value>
            <value>
                <fullName>Bodega</fullName>
            </value>
            <value>
                <fullName>Cobranza</fullName>
            </value>
            <value>
                <fullName>Comercial y Ventas</fullName>
            </value>
            <value>
                <fullName>Comercio Exterior</fullName>
            </value>
            <value>
                <fullName>Compras y Adquisiciones</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Enólogo(a)</fullName>
            </value>
            <value>
                <fullName>Facturación</fullName>
            </value>
            <value>
                <fullName>Finanzas</fullName>
            </value>
            <value>
                <fullName>Gerente General</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operaciones</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>Secretaria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>